--- a/lang/en.txt
+++ b/lang/en.txt
@@ -1,17 +1,17 @@
 Логин=Login
-Логин*=Login
+Логин*=Login*
 логин=login
-Пароль*=Password
+Пароль*=Password*
 Пароль=Password
 пароль=password
 Регистрация=Register
 Войти=SignIn
 Подтверждение*=Confirmation*
 подтверждение=сonfirmation
-Имя*=Name
+Имя*=Name*
 Имя=Name
 имя=name
-E-mail*=Email
+E-mail*=Email*
 e-mail=email
 Содержимое поля "Email" не является email адресом=The contents of the field "Email" is not an email address
 Поле Имя обязательно для заполнения. Длина не менее 2 символов и может содержать только русские или латинские буквы=The Name field is required. The length of at least 2 characters and can only contain letters 
@@ -62,3 +62,4 @@ e-mail=email
 К сожалению такой странички<br/>не найдено. Администрация сайта<br/>приносит вам свои извенения.<br/>=Unfortunately this page<br/>not found. Administration of<br/>this site brings you my apologies.<br/>
 Ошибка на сервере. Попробуйте еще раз=The error on the server. try again
 Выберите файл=Choose File
+Ссылка не действительна=Reference is not valid
